Compiler Bouw/compiler/test/basic/stephen/fail/missing_sbrackets.cvc
export int main() {
    int [3] = 1, 1, 1;
    return 0;
}
